fixed h2 reactive application